# minisqlite

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  test.sql
.agents/skills/testing-minisqlite-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: kernel_bench.rs
docs/: ADR-001.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRACT_TESTS.md  DEPENDENCIES.md  FINAL_REPORT.md  FIRST_PRINCIPLES.md  FORMAT.md  INVARIANTS.md  JOBS.md  LEGACY_AUDIT.md  LIMITATIONS.md  PERFORMANCE.md  PIVOT.md  PR-RULES.md  PRODUCT.md  RECOVERY.md  REQUIREMENTS.md  ROADMAP.md  SCOPE.md  SECURITY.md  SYNARA_CASE_STUDY.md  SYNARA_INTEGRATION.md
examples/: benchmark.rs  embed.rs  synara_control_plane.rs  synara_provider_turn.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_decode.rs  fuzz_ops.rs  header_decode.rs  record_decode.rs  recovery_scan.rs
minisqlite-node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
minisqlite-node/examples/: synara_provider_turn.mjs
minisqlite-node/src/: lib.rs
minisqlite-node/tests/: job_lifecycle.test.ts  synara_provider_turn.test.ts
src/: btree.rs  catalog.rs  config.rs  error.rs  event.rs  executor.rs  functions.rs  id.rs  jobs.rs  lib.rs  main.rs  pager.rs  projection.rs  sha256.rs  sql.rs  store.rs  transaction.rs  types.rs  wal.rs
src/codec/: checksum.rs  frame.rs  mod.rs  record.rs
src/storage/: file.rs  lock.rs  mod.rs  recovery.rs
src/store/: commit.rs  connection.rs  events.rs  failpoints.rs  jobs.rs  migrations.rs  mod.rs  ops.rs  projections.rs  read_pool.rs
tests/: cli.rs  cli_smoke.rs  concurrency.rs  contract_claims.rs  contract_commit.rs  contract_model.rs  contract_tests_plan.rs  crash.rs  crash_recovery.rs  failpoint_indeterminate.rs  fuzz_targets.rs  integration.rs  invalid_job_transitions.rs  job_property.rs  jobs_claims.rs  jobs_transitions.rs  limits.rs  migrations_checks.rs  ops_backup.rs  ops_verify_stats.rs  p1_regression.rs  projection_ops.rs  projections_apply.rs  projections_read.rs  property.rs  property_random_ops.rs  review5.rs  review6.rs  review6_fuzz.rs  review7.rs  review8.rs  review9.rs  review9_codec.rs  security.rs  soak.rs  stress_concurrency.rs  stress_races.rs
tests/common/: mod.rs
