[package]
name = "minisqlite"
version = "0.3.0-alpha.1"
edition = "2021"
authors = ["Kartik Kabadi <kartik@kartikkabadi.com>"]
description = "A typed embedded control-plane state kernel on SQLite: atomic events, projections, and durable jobs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kartikkabadi/minisqlite"
homepage = "https://github.com/kartikkabadi/minisqlite"
documentation = "https://docs.rs/minisqlite"
keywords = ["control-plane", "event-sourcing", "jobs", "embedded", "sqlite"]
categories = ["database"]

[[bin]]
name = "minisqlite"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "kernel_bench"
harness = false
