[package]
name = "minisqlite"
version = "0.3.0-alpha.1"
edition = "2021"
authors = ["Kartik Kabadi <kartik@kartikkabadi.com>"]
description = "Commit events, current state, and background jobs in one atomic SQLite transaction, with explicit crash recovery"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kartikkabadi/minisqlite"
homepage = "https://github.com/kartikkabadi/minisqlite"
documentation = "https://docs.rs/minisqlite"
keywords = ["job-queue", "event-sourcing", "jobs", "embedded", "sqlite"]
categories = ["database"]
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE*"]

[[bin]]
name = "minisqlite"
path = "src/main.rs"

[dependencies]
getrandom = "0.2"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

[dev-dependencies]
tempfile = "3"

[features]
# Test-only fault injection; see src/store/failpoints.rs.
failpoints = []

[[bench]]
name = "kernel_bench"
harness = false
