[package]
name = "minisqlite-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.minisqlite]
path = ".."

[[bin]]
name = "header_decode"
path = "fuzz_targets/header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record_decode"
path = "fuzz_targets/record_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "recovery_scan"
path = "fuzz_targets/recovery_scan.rs"
test = false
doc = false
bench = false
